@startuml G2_DatabaseDiagram_Facilities
!theme plain
hide methods
hide stereotypes
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classFontName Courier
skinparam classBackgroundColor #EAFAF1
skinparam classBorderColor #27AE60
skinparam classHeaderBackgroundColor #1E8449
skinparam ArrowColor #27AE60
skinparam ArrowThickness 1.5

title <b>DATABASE DIAGRAM — Nhóm 2: Cơ sở vật chất & Rạp</b>

entity branches {
  * **id** : BIGINT <<PK, AUTO_INCREMENT>>
  ==
  * name      : VARCHAR(255)
    address   : VARCHAR(255)
    city      : VARCHAR(100)
    phone     : VARCHAR(20)
  * is_active : BOOLEAN DEFAULT true
}

entity room_types {
  * **id** : VARCHAR(50) <<PK>>
  ==
  * name : VARCHAR(255)
}

entity rooms {
  * **id** : BIGINT <<PK, AUTO_INCREMENT>>
  ==
  * <u>branch_id</u>    : BIGINT <<FK→branches.id>>
  * <u>room_type_id</u> : VARCHAR(50) <<FK→room_types.id>>
  * name               : VARCHAR(255)
  * capacity           : INT
    num_rows           : INT
    num_cols           : INT
    status             : VARCHAR(50) DEFAULT 'ACTIVE'
    -- CHECK: ACTIVE|INACTIVE
}

entity seat_types {
  * **id** : VARCHAR(50) <<PK>>
  ==
  * name        : VARCHAR(255)
    description : TEXT
}

entity seats {
  * **id** : BIGINT <<PK, AUTO_INCREMENT>>
  ==
  * <u>room_id</u>      : BIGINT <<FK→rooms.id>>
  * <u>seat_type_id</u> : VARCHAR(50) <<FK→seat_types.id>>
  * row_char            : VARCHAR(10)
  * col_num             : INT
  * status              : BOOLEAN DEFAULT true
    -- UNIQUE(room_id, row_char, col_num)
}

entity formats {
  * **id** : VARCHAR(50) <<PK>>
  ==
  * name : VARCHAR(255)
}

entity room_type_formats {
  * **room_type_id** : VARCHAR(50) <<PK, FK→room_types.id>>
  * **format_id**    : VARCHAR(50) <<PK, FK→formats.id>>
}

branches      ||--|{ rooms              : "branch_id"
room_types    ||--o{ rooms              : "room_type_id"
rooms         ||--|{ seats              : "room_id"
seat_types    ||--o{ seats              : "seat_type_id"
room_types    ||--|{ room_type_formats  : "room_type_id"
formats       ||--|{ room_type_formats  : "format_id"

@enduml
